# dynamic-registry

./: .gitignore  pyproject.toml  readme.md  setup.cfg
dev/: decorator_example.py  register_functions_example.py
dev/subclass_hook_example/: connector.py  connector_extension.py  parent_with_registry.py  pwr_other.py  subclass_hook.py
src/dynamic_registry/: __init__.py  class_registry.py  function_registry.py  registry.py
src/dynamic_registry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_class_registry.py  test_readme.py  test_registry.py  testing_utils.py
tests/character_expansion/: wizard.py
tests/characters/: __init__.py  character.py  elf.py
tests/test_characters/: character.py  elf.py
