[metadata]
name = dynamic-registry
version = 0.2.0
author = Jason Thomas
author_email = jason.thomas@covermymeds.com
description = Dynamically registers the subclasses of a parent at runtime for easy extensibility.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.innova-partners.com/jason-thomas/dynamic-registry
project_urls =
    Demo = https://git.innova-partners.com/jason-thomas/extensibility-demo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src