[metadata]
name = dynamic-registry
version = 0.2.0
author = Jason Thomas
description = Dynamically registers the subclasses of a parent at runtime for easy extensibility.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlookup/dynamic-registry

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest >=7.2
test =
    pytest >=7.2

[tool.pytest]
testpaths = tests
